--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ celery = {extras = ["sqs"], version = "^5.3.6"}
 uvicorn = "^0.24.0.post1"
 fastapi = "^0.105.0"
 pydantic-settings = "^2.1.0"
-boto3 = "^1.34.0"
+boto3 = "^1.33.1"
+aioboto3 = "^12.1.0"
 
 
 [build-system]
